--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,9 @@ title: Muhammad Shahin # your name (or website title) here
 logo: "/images/181181_faces.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist 
-  <br><br>
   Software Engineer 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/muhammad-shahin-66879630/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
