--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Muhammad Shahin # your name (or website title) here
-logo: "/images/181181_faces.jpg?raw=true" # your photo (or logo) here
+logo: "/images/MuhammadShahin.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Data Scientist 
   Software Engineer 
