--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Muhammad Shahin # your name (or website title) here
-logo: "/images/MuhammadShahin.jpg?raw=true" # your photo (or logo) here
+logo: "/images/Picture1.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Scientist
-  <br><br>
+  Data Scientist 
   Software Engineer 
   <br><br>
   <a href="https://www.linkedin.com/in/muhammad-shahin-66879630/">View My LinkedIn Profile</a> 
